@@ -1,3 +1,8 @@
+2020-05-03  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* listlayoutmanager/list_element_impl.C: Rename get_item_layoutmanager()
+	to submenu_listlayout(), for consistency.
+
 2020-04-28  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* shortcut.C: Recognize "Enter" as a shortcut.
